Update email address to francesco.prisco@generazioneai.it

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Francesco Prisco",
-            "email": "francesco@codeloops.it"
+            "email": "francesco.prisco@generazioneai.it"
         }
     ],
     "require": {
